# marv

./: .gitignore  .luacheckrc  Cross.toml  Makefile  README.md
.github/workflows/: build.yaml  lint.yaml
autoload/marv/: init.vim  os.vim  preview.vim  render.vim
ftplugin/markdown/: running.vim
lua/marv/: init.lua
plugin/: marv.lua  marv.vim
rust/: Cargo.toml  README.md
rust/src/: main.rs  renderer.rs  server.rs  watcher.rs
rust/src/utils/: file.rs  process.rs
