[package]
name = "marv"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for previewing Markdown files with Mermaid diagram support"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pulldown-cmark = { version = "0.9", default-features = false }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
notify = "5.1"
maud = "0.25"
futures = "0.3"
anyhow = "1.0"
dirs = "5.0"
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
syntect = "5.0"
regex = "1.10.2"
html-escape = "0.2.13"
